tests/fail/missing_trait_from_str.stderr
error[E0277]: the trait bound `NoFromStr: FromStr` is not satisfied
 --> $DIR/missing_trait_from_str.rs:9:32
  |
9 |     sscanf::scanf!("hi", "{}", module::NoFromStr);
  |                                ^^^^^^^^^^^^^^^^^ the trait `FromStr` is not implemented for `NoFromStr`

error[E0277]: the trait bound `NoFromStr: FromStr` is not satisfied
  --> $DIR/missing_trait_from_str.rs:11:32
   |
11 |     sscanf::scanf!("hi", "{}", NoFromStr);
   |                                ^^^^^^^^^ the trait `FromStr` is not implemented for `NoFromStr`
